# stratum

./: .gitignore  CLI.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/: CLI.md
src/strato/: CLI.md  main.py
src/strato/core/: models.py  presenter.py  runner.py  scanner.py  style.py
src/strato/services/awslambda/: client.py
src/strato/services/awslambda/cli/: __init__.py  inventory.py
src/strato/services/ec2/: client.py
src/strato/services/ec2/cli/: __init__.py  inventory.py  reserved.py
src/strato/services/rds/: client.py
src/strato/services/rds/cli/: __init__.py  inventory.py  reserved.py
src/strato/services/s3/: client.py  utils.py
src/strato/services/s3/cli/: __init__.py  inventory.py  security.py
src/strato/services/s3/domains/: security.py
src/strato/tests/: conftest.py  test_docs.py  test_quality.py
src/strato/tests/core/: test_core.py  test_models.py  test_presenter.py  test_runner.py  test_scoring.py
strato/: main.py
strato/core/: models.py  presenter.py  runner.py  scanner.py  scoring.py
strato/services/s3/: client.py
strato/services/s3/cli/: __init__.py  security.py
strato/services/s3/domains/: security.py
strato/tests/core/: test_presenter.py
strato/tests/services/s3/: conftest.py  test_security_logic.py  test_security_scanner.py
stratum/: main.py
stratum/core/: models.py  runner.py  scanner.py
stratum/services/s3/cli/: security.py
stratum/services/s3/domains/: security.py
stratum/tests/services/s3/: conftest.py  test_security_logic.py  test_security_scanner.py
(+47 files in other folders)
