[project]
name = "strato"
version = "0.1.0"
description = "Strato is an extensible, opinionated command-line interface (CLI) for auditing AWS infrastructure."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sto = "strato.main:app"