[project]
name = "strato"
version = "0.0.34"
description = "Strato is an extensible, opinionated command-line interface (CLI) for auditing AWS infrastructure."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.3",
    "moto>=5.1.19",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
sto = "strato.main:app"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.3.0",
    "python-semantic-release>=9.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "uv lock && uv build"
